# enzyme-tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data.vtu  main.cc
modules/aligned/: aligned.xx  allocator.xx
modules/enzyme/: enzyme.xx
modules/utils/: utils.xx
src/: lib1.cc  lib2.cc  main.cc  provider.hh
src/aligned/: types.xx
src/cfd/: cfd.xx
src/cfd/common/: common.xx
src/cfd/lmhfe/: lmhfe.xx
src/enzyme/: enzyme.xx
src/main/: avx2.cc  avx2.xx  main.cc  main.xx  omp.cc  omp.xx
src/math/: math.xx
src/math/blas/: blas.xx
src/math/core/: compare.xx  core.xx  matvec.xx  traits.xx
src/math/gmres/: gmres.xx
src/utils/: concepts.xx  utils.xx
src/utils/assert/: assert.xx
src/utils/cstd/: cstd.xx  internal.xx
src/utils/random/: random.xx
src/utils/selftest/: selftest.xx
test/unit/: main.cc
test/unit/enzyme/math/gmres/: gmres.cc
test/unit/math/: core.cc
test/unit/math/gmres/: gmres.cc
tests/eigen-simple/: main.cc
tests/eigensumsqdyn-notmp/: main.cc
tests/mhfem/: CMakeLists.txt  main.cc  math.xx  selftest.xx  test_math_basic.cc  test_math_common.hh  test_math_lambdas.cc
tests/mhfem/math/: basic_linalg.xx  gmres.xx  math.xx
tests/multi-tu/: CMakeLists.txt  main.cc  provider.cc
